# plugforge

./: .codeinsight.digest  .gitignore  .prd  .prd-wave5  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_VALIDATION_REPORT.txt  CONSOLIDATION_PLAN.md  CUsersuser.claudegm-logfind_main.js  Cdevgm.gmprd.yml  EXECUTION_SUMMARY.txt  GETTING_STARTED.md  GM-GC-COMPLETE.md  GM-GC-STATUS.md  HARDENING.md  IMPLEMENTATION_SUMMARY.md  PARITY_TEST_REPORT.md  PLATFORMS.md  PROMPT_DRIVEN_SKILLS_SPEC.txt  README.md  SKILLS.md  build-output.txt  ccsniff-gm-lint.js  cli.js  glootie-schema.json  gm-schema.json  index.html  log.txt  package-lock.json  package.json  paper.html  paper.tex  patch-hooks.mjs  phase-5-validation.js  phase4-wasm-status.js  pong.sh  (+8 more)
.claude/: settings.json
.gm/: audit-logs.js  browser-mutables.yml  memorize-now.md  mutables-acptoapi.yml  mutables.yml  prd-optimization.yml  prd-planning.md  prd-update.js  prd.yml  rs-learn.db
agentgui/: client.js
docs/: crates.html  distribution.html  index.html  made-with.html  mascot.html  paper-review-wood.md  paper.html  paper2.html  paper3.html  paper4.html  paper5.html  plugkit-bin-migration.md  skills.html  stats.html
final-build/gm-zed/: Cargo.toml  extension.toml  index.html
final-build/gm-zed/skills/ssh/: SKILL.md
gm-build/gm-zed/: Cargo.toml  extension.toml  index.html
gm-build/gm-zed/skills/planning/: SKILL.md
gm-skill/: README.md  gm-emit.SKILL.md  gm-execute.SKILL.md  gm.SKILL.md  index.js  package-lock.json  package.json  planning.SKILL.md  test-build.js  (+7 more)
(+840 files in other folders)
