[package]
name = "gm-zed"
version = "2.0.1067"
edition = "2021"
authors = ["AnEntrypoint"]
license = "MIT"
description = "Spool-dispatch orchestration engine with unified state machine, skills, and automated git enforcement"
repository = "https://github.com/AnEntrypoint/gm-zed"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
